# um-s_robot

./: README.md
open_manipulator/open_manipulator_description/urdf/: open_manipulator.urdf.xacro  open_manipulator_robot.urdf.xacro  sensor_d435i.xacro
open_manipulator_controls/open_manipulator_moveit_config/config/: kinematics.yaml  open_manipulator.srdf
open_manipulator_msgs/: README.md
open_manipulator_simulations/: README.md
pick_script_plz/: CMakeLists.txt  package.xml
pick_script_plz/scripts/: move_to_tf_point.py  object_detector.py  pick_and_place_task.py  ppap.py
trash_pick/: CMakeLists.txt  package.xml
trash_pick/launch/: trash_pick.launch
trash_pick/msg/: DetectedObject.msg
trash_pick/scripts/: objdt.py  ppap.py
