<?xml version="1.0"?>
<package format="2">
  <name>trash_pick</name>
  <version>0.0.0</version>
  <description>The trash_pick package</description>

  <maintainer email="lim@todo.todo">lim</maintainer>
  <license>TODO</license>

  <!-- build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build depends -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <!-- build export depends (선택적) -->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>

  <!-- exec depends -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>

  <export/>
</package>

